# kafka-streamer

./: .gitignore  LICENSE  README.md  pyproject.toml
kafka_streamer/: __init__.py  consumer.py  exceptions.py  models.py  producer.py  streamer.py  utils.py
kafka_streamer/client/: __init__.py  consumer.py  producer.py
kafka_streamer/models/: __init__.py  avro.py  base.py
kafka_streamer/topic/: __init__.py  base.py  regex.py  single.py  topic.py
kafka_streamer/topic/datatype/: __init__.py  base.py  byte.py  key.py  schematic.py  selector.py  serializable.py  value.py
scripts/: test.sh
tests/: message.py  registry.py  test_kafka_streamer.py  test_utils.py
tests/client/: test_consumer.py  test_producer.py
tests/models/: test_avro.py
tests/topic/: test_base.py
tests/topic/datatype/: test_base.py  test_key.py  test_value.py
